[gd_scene load_steps=7 format=4 uid="uid://dh7u6xtf07km4"]

[ext_resource type="FontFile" uid="uid://c4d86mydkoy8c" path="res://资源/Font.ttf" id="1_43y3a"]
[ext_resource type="Script" path="res://场景/UI/title.gd" id="1_odqxh"]
[ext_resource type="AudioStream" uid="uid://yn60w7fproux" path="res://资源/music/BGM.wav" id="2_8lmwq"]
[ext_resource type="Texture2D" uid="uid://dic4wlhrayrjx" path="res://资源/tile.png" id="3_mx46m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_60g5t"]
texture = ExtResource("3_mx46m")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
2:6/0 = 0
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_441fp"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_60g5t")

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odqxh")
path = "res://场景/cg/cg.tscn"
bgm = ExtResource("2_8lmwq")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAsAAAACAAIAAAAGAAsAAAACAAIAAAAHAAsAAAACAAIAAAAIAAsAAAACAAIAAAAJAAsAAAACAAIAAAAKAAsAAAACAAIAAAALAAsAAAACAAIAAAAMAAsAAAACAAIAAAANAAsAAAACAAIAAAAOAAsAAAACAAIAAAAPAAsAAAACAAIAAAAQAAsAAAACAAIAAAARAAsAAAACAAIAAAASAAsAAAACAAIAAAATAAsAAAACAAIAAAAEAAsAAAACAAIAAAADAAsAAAACAAIAAAACAAsAAAACAAIAAAABAAsAAAACAAIAAAAUAAsAAAACAAIAAAAVAAsAAAACAAIAAAAWAAsAAAACAAIAAAAXAAsAAAACAAIAAAAXAAoAAAACAAIAAAAXAAkAAAACAAIAAAAXAAgAAAACAAIAAAAXAAcAAAACAAIAAAAXAAYAAAACAAIAAAAXAAUAAAACAAIAAAAXAAQAAAACAAIAAAAXAAMAAAACAAIAAAAXAAIAAAACAAIAAAAWAAEAAAACAAIAAAAVAAEAAAACAAIAAAAUAAEAAAACAAIAAAATAAEAAAACAAIAAAASAAEAAAACAAIAAAARAAEAAAACAAIAAAAQAAEAAAACAAIAAAAPAAEAAAACAAIAAAAOAAEAAAACAAIAAAANAAEAAAACAAIAAAAMAAEAAAACAAIAAAALAAEAAAACAAIAAAAKAAEAAAACAAIAAAAJAAEAAAACAAIAAAAIAAEAAAACAAIAAAAHAAEAAAACAAIAAAAGAAEAAAACAAIAAAAFAAEAAAACAAIAAAAEAAEAAAACAAIAAAADAAEAAAACAAIAAAACAAEAAAACAAIAAAABAAEAAAACAAIAAAAAAAoAAAACAAIAAAAAAAIAAAACAAIAAAAAAAMAAAACAAIAAAAAAAQAAAACAAIAAAAAAAUAAAACAAIAAAAAAAYAAAACAAIAAAAAAAcAAAACAAIAAAAAAAgAAAACAAIAAAAAAAkAAAACAAIAAAAXAAEAAAACAAIAAAAAAAEAAAACAAIAAAAAAAsAAAACAAIAAAAVAAoAAAAKAAQAAAAWAAoAAAALAAQAAAATAAoAAAAKAAQAAAAUAAoAAAALAAQAAAARAAoAAAAKAAQAAAASAAoAAAALAAQAAAAPAAoAAAACAAIAAAAQAAoAAAACAAIAAAABAAoAAAACAAIAAAACAAoAAAAIAAcAAAADAAoAAAAJAAcAAAADAAIAAAACAAIAAAAEAAIAAAACAAIAAAAFAAIAAAACAAIAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAHAAIAAAACAAIAAAAHAAMAAAACAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAANAAIAAAACAAIAAAAOAAIAAAACAAIAAAAPAAIAAAACAAIAAAABAAcAAAACAAIAAAABAAYAAAACAAIAAAABAAUAAAACAAIAAAAKAAoAAAAJAAMAAAALAAoAAAAIAAMAAAAMAAoAAAAJAAMAAAAVAAIAAAACAAIAAAAVAAMAAAACAAIAAAAWAAIAAAACAAIAAAAWAAMAAAACAAIAAAAUAAIAAAACAAIAAAAUAAMAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAGAAYAAAAKAAIAAAAGAAcAAAACAAIAAAAHAAYAAAALAAIAAAAHAAcAAAACAAIAAAAVAAQAAAACAAIAAAAVAAUAAAACAAIAAAAVAAYAAAALAAYAAAAWAAQAAAACAAIAAAAWAAUAAAACAAIAAAAJAAQAAAACAAIAAAAJAAUAAAALAAEAAAAKAAQAAAACAAIAAAAKAAUAAAACAAIAAAAVAAgAAAACAAIAAAAVAAkAAAAKAAMAAAAWAAgAAAACAAIAAAAWAAkAAAALAAMAAAATAAgAAAACAAIAAAATAAkAAAAKAAMAAAAUAAgAAAACAAIAAAAUAAkAAAALAAMAAAD+/wAAAAACAAIAAAD+/wEAAAACAAIAAAD+/wIAAAACAAIAAAD+/wMAAAACAAIAAAD+/wQAAAACAAIAAAD+/wUAAAACAAIAAAD+/wYAAAACAAIAAAD+/wcAAAACAAIAAAD+/wgAAAACAAIAAAD+/wkAAAACAAIAAAD+/woAAAACAAIAAAD+/wsAAAACAAIAAAD+/wwAAAACAAIAAAD//wAAAAACAAIAAAD//wEAAAACAAIAAAD//wIAAAACAAIAAAD//wMAAAACAAIAAAD//wQAAAACAAIAAAD//wUAAAACAAIAAAD//wYAAAACAAIAAAD//wcAAAACAAIAAAD//wgAAAACAAIAAAD//wkAAAACAAIAAAD//woAAAACAAIAAAD//wsAAAACAAIAAAD//wwAAAACAAIAAAAAAAAAAAACAAIAAAAAAAwAAAACAAIAAAABAAAAAAACAAIAAAABAAIAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAABAAgAAAACAAIAAAABAAkAAAACAAIAAAABAAwAAAACAAIAAAACAAAAAAACAAIAAAACAAIAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAACAAUAAAACAAIAAAACAAYAAAACAAIAAAACAAcAAAACAAIAAAACAAgAAAACAAIAAAACAAkAAAAIAAYAAAACAAwAAAACAAIAAAADAAAAAAACAAIAAAADAAMAAAACAAIAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAIAAAADAAkAAAAJAAYAAAADAAwAAAACAAIAAAAEAAAAAAACAAIAAAAEAAMAAAACAAIAAAAEAAQAAAACAAIAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAACAAIAAAAEAAgAAAACAAIAAAAEAAkAAAACAAIAAAAEAAoAAAACAAIAAAAEAAwAAAACAAIAAAAFAAAAAAACAAIAAAAFAAMAAAACAAIAAAAFAAQAAAACAAIAAAAFAAUAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAIAAAAFAAoAAAACAAIAAAAFAAwAAAACAAIAAAAGAAAAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAAKAAEAAAAGAAgAAAACAAIAAAAGAAkAAAACAAIAAAAGAAoAAAACAAIAAAAGAAwAAAACAAIAAAAHAAAAAAACAAIAAAAHAAQAAAACAAIAAAAHAAUAAAALAAEAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAHAAoAAAACAAIAAAAHAAwAAAACAAIAAAAIAAAAAAACAAIAAAAIAAQAAAACAAIAAAAIAAUAAAAKAAEAAAAIAAYAAAAKAAIAAAAIAAcAAAACAAIAAAAIAAgAAAACAAIAAAAIAAkAAAACAAIAAAAIAAoAAAACAAIAAAAIAAwAAAACAAIAAAAJAAAAAAACAAIAAAAJAAIAAAACAAIAAAAJAAMAAAACAAIAAAAJAAYAAAALAAIAAAAJAAcAAAACAAIAAAAJAAgAAAAIAAEAAAAJAAkAAAAIAAIAAAAJAAoAAAAIAAMAAAAJAAwAAAACAAIAAAAKAAAAAAACAAIAAAAKAAIAAAACAAIAAAAKAAMAAAACAAIAAAAKAAYAAAACAAIAAAAKAAcAAAACAAIAAAAKAAgAAAAJAAEAAAAKAAkAAAAJAAIAAAAKAAwAAAACAAIAAAALAAAAAAACAAIAAAALAAIAAAACAAIAAAALAAMAAAACAAIAAAALAAQAAAACAAIAAAALAAUAAAACAAIAAAALAAYAAAACAAIAAAALAAcAAAACAAIAAAALAAgAAAAIAAEAAAALAAkAAAAIAAIAAAALAAwAAAACAAIAAAAMAAAAAAACAAIAAAAMAAIAAAACAAIAAAAMAAMAAAACAAIAAAAMAAQAAAAMAAEAAAAMAAUAAAAMAAIAAAAMAAYAAAAMAAMAAAAMAAcAAAACAAIAAAAMAAgAAAAJAAEAAAAMAAkAAAAJAAIAAAAMAAwAAAACAAIAAAANAAAAAAACAAIAAAANAAMAAAACAAIAAAANAAQAAAANAAEAAAANAAUAAAANAAIAAAANAAYAAAANAAMAAAANAAcAAAACAAIAAAANAAgAAAAIAAEAAAANAAkAAAAIAAIAAAANAAoAAAAIAAMAAAANAAwAAAACAAIAAAAOAAAAAAACAAIAAAAOAAMAAAACAAIAAAAOAAQAAAAMAAEAAAAOAAUAAAAMAAIAAAAOAAYAAAAMAAMAAAAOAAcAAAACAAIAAAAOAAgAAAAJAAEAAAAOAAkAAAAJAAIAAAAOAAoAAAAJAAMAAAAOAAwAAAACAAIAAAAPAAAAAAACAAIAAAAPAAMAAAACAAIAAAAPAAQAAAANAAEAAAAPAAUAAAANAAIAAAAPAAYAAAANAAMAAAAPAAcAAAACAAIAAAAPAAgAAAACAAIAAAAPAAkAAAACAAIAAAAPAAwAAAACAAIAAAAQAAAAAAACAAIAAAAQAAIAAAACAAIAAAAQAAMAAAACAAIAAAAQAAQAAAACAAIAAAAQAAUAAAACAAIAAAAQAAYAAAACAAIAAAAQAAcAAAACAAIAAAAQAAgAAAACAAIAAAAQAAkAAAACAAIAAAAQAAwAAAACAAIAAAARAAAAAAACAAIAAAARAAIAAAACAAIAAAARAAMAAAACAAIAAAARAAQAAAACAAIAAAARAAUAAAACAAIAAAARAAYAAAACAAIAAAARAAcAAAACAAIAAAARAAgAAAACAAIAAAARAAkAAAAKAAMAAAARAAwAAAACAAIAAAASAAAAAAACAAIAAAASAAIAAAACAAIAAAASAAMAAAACAAIAAAASAAQAAAACAAIAAAASAAUAAAACAAIAAAASAAYAAAACAAIAAAASAAcAAAACAAIAAAASAAgAAAACAAIAAAASAAkAAAALAAMAAAASAAwAAAACAAIAAAATAAAAAAACAAIAAAATAAIAAAACAAIAAAATAAMAAAACAAIAAAATAAQAAAACAAIAAAATAAUAAAACAAIAAAATAAYAAAACAAIAAAATAAcAAAACAAIAAAATAAwAAAACAAIAAAAUAAAAAAACAAIAAAAUAAQAAAACAAIAAAAUAAUAAAACAAIAAAAUAAYAAAACAAIAAAAUAAcAAAACAAIAAAAUAAwAAAACAAIAAAAVAAAAAAACAAIAAAAVAAcAAAALAAcAAAAVAAwAAAACAAIAAAAWAAAAAAACAAIAAAAWAAYAAAAMAAYAAAAWAAcAAAAMAAcAAAAWAAwAAAACAAIAAAAXAAAAAAACAAIAAAAXAAwAAAACAAIAAAAYAAAAAAACAAIAAAAYAAEAAAACAAIAAAAYAAIAAAACAAIAAAAYAAMAAAACAAIAAAAYAAQAAAACAAIAAAAYAAUAAAACAAIAAAAYAAYAAAACAAIAAAAYAAcAAAACAAIAAAAYAAgAAAACAAIAAAAYAAkAAAACAAIAAAAYAAoAAAACAAIAAAAYAAsAAAACAAIAAAAYAAwAAAACAAIAAAD+/w0AAAACAAIAAAD//w0AAAACAAIAAAAAAA0AAAACAAIAAAABAA0AAAACAAIAAAACAA0AAAACAAIAAAADAA0AAAACAAIAAAAEAA0AAAACAAIAAAAFAA0AAAACAAIAAAAGAA0AAAACAAIAAAAHAA0AAAACAAIAAAAIAA0AAAACAAIAAAAJAA0AAAACAAIAAAAKAA0AAAACAAIAAAALAA0AAAACAAIAAAAMAA0AAAACAAIAAAANAA0AAAACAAIAAAAOAA0AAAACAAIAAAAPAA0AAAACAAIAAAAQAA0AAAACAAIAAAARAA0AAAACAAIAAAASAA0AAAACAAIAAAATAA0AAAACAAIAAAAUAA0AAAACAAIAAAAVAA0AAAACAAIAAAAWAA0AAAACAAIAAAAXAA0AAAACAAIAAAAYAA0AAAACAAIAAAA=")
tile_set = SubResource("TileSet_441fp")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 45.0
offset_right = 352.0
offset_bottom = 75.0
theme_override_fonts/normal_font = ExtResource("1_43y3a")
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[wave amp = 10]Living towards death"

[node name="main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="start" type="Button" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 132.0
offset_top = 81.0
offset_right = 200.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "start
"

[node name="level" type="Button" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 132.0
offset_top = 111.0
offset_right = 200.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "level"

[node name="level" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="level"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -10.0
offset_right = 73.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
columns = 10

[node name="one" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "1"

[node name="two" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "2"

[node name="three" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "3"

[node name="four" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "4"

[node name="five" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "5"

[node name="six" type="Button" parent="level/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "6"

[node name="re" type="Button" parent="level"]
layout_mode = 0
offset_left = 171.0
offset_top = 143.0
offset_right = 216.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("1_43y3a")
theme_override_font_sizes/font_size = 12
text = "back"

[node name="bk" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="bk"]
tile_map_data = PackedByteArray("AAAFAAsAAAACAAEAAAAGAAsAAAACAAEAAAAHAAsAAAACAAEAAAAIAAsAAAACAAEAAAAJAAsAAAACAAEAAAAKAAsAAAACAAEAAAALAAsAAAACAAEAAAAMAAsAAAACAAEAAAANAAsAAAACAAEAAAAOAAsAAAACAAEAAAAPAAsAAAACAAEAAAAQAAsAAAACAAEAAAARAAsAAAACAAEAAAASAAsAAAACAAEAAAATAAsAAAACAAEAAAAEAAsAAAACAAEAAAADAAsAAAACAAEAAAACAAsAAAACAAEAAAABAAsAAAACAAEAAAAUAAsAAAACAAEAAAAVAAsAAAACAAEAAAAWAAsAAAACAAEAAAAXAAsAAAAFAAIAAAAXAAoAAAABAAIAAAAXAAkAAAABAAIAAAAXAAgAAAABAAIAAAAXAAcAAAABAAIAAAAXAAYAAAABAAIAAAAXAAUAAAABAAIAAAAXAAQAAAABAAIAAAAXAAMAAAABAAIAAAAXAAIAAAABAAIAAAAWAAEAAAACAAMAAAAVAAEAAAACAAMAAAAUAAEAAAACAAMAAAATAAEAAAACAAMAAAASAAEAAAACAAMAAAARAAEAAAACAAMAAAAQAAEAAAACAAMAAAAPAAEAAAACAAMAAAAOAAEAAAACAAMAAAANAAEAAAACAAMAAAAMAAEAAAACAAMAAAALAAEAAAACAAMAAAAKAAEAAAACAAMAAAAJAAEAAAACAAMAAAAIAAEAAAACAAMAAAAHAAEAAAACAAMAAAAGAAEAAAACAAMAAAAFAAEAAAACAAMAAAAEAAEAAAACAAMAAAADAAEAAAACAAMAAAACAAEAAAACAAMAAAABAAEAAAACAAMAAAAAAAoAAAADAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAXAAEAAAAFAAMAAAAAAAEAAAAGAAMAAAAAAAsAAAAGAAIAAAAVAAoAAAABAA4AAAAWAAoAAAACAA4AAAATAAoAAAADAA4AAAAUAAoAAAAEAA4AAAARAAoAAAAEAA4AAAASAAoAAAACAA4AAAAPAAoAAAABAA4AAAAQAAoAAAADAA4AAAABAAoAAAAKAA8AAAACAAoAAAALAA8AAAADAAoAAAAMAA8AAAADAAIAAAAHAA8AAAAEAAIAAAAIAA8AAAAFAAIAAAAJAA8AAAAGAAIAAAAHAAwAAAAGAAMAAAAHAA0AAAAHAAIAAAAIAAwAAAAHAAMAAAAIAA0AAAAIAAIAAAAJAAwAAAAIAAMAAAAJAA0AAAANAAIAAAAEAAwAAAAOAAIAAAAFAAwAAAAPAAIAAAAGAAwAAAABAAcAAAAEAAwAAGABAAYAAAAFAAwAAGABAAUAAAAGAAwAAGAKAAoAAAAKAAwAAAALAAoAAAAKAAwAAAAMAAoAAAAKAAwAAAAVAAIAAAACAAwAAAAVAAMAAAACAA0AAAAWAAIAAAACAAwAAAAWAAMAAAACAA0AAAAUAAIAAAACAAwAAAAUAAMAAAACAA0AAAA=")
tile_set = SubResource("TileSet_441fp")

[connection signal="pressed" from="main/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main/level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="level/GridContainer/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="level/GridContainer/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="level/GridContainer/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="level/GridContainer/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="level/GridContainer/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="level/GridContainer/six" to="." method="_on_six_pressed"]
[connection signal="pressed" from="level/re" to="." method="_on_re_pressed"]
